fix: bye blok overflow

--- a/src/components/bye-blok/bye-blok.module.sass
+++ b/src/components/bye-blok/bye-blok.module.sass
@@ -5,3 +5,11 @@
   min-height: 100svh
   z-index: var(--z-index-bye-blok)
   pointer-events: auto
+  overflow: hidden
+  .threeDContainerByeBlok
+    position: absolute
+    bottom: 50%
+    left: 50%
+    transform: translate(-50%, 50%)
+    width: 100vmin
+    height: 100vmin
